tests/NormalTests/paczka2/big_fuzzy/18847181.err
Error in line 3: WOo4TCXQB A196 47,48
Error in line 6: 87BTt S292 72,8
Error in line 11: aGKfQQL5 S292 10,1
Error in line 24: HGcrtZAVCo1 A323 82,8
Error in line 45: 87BTt A323 200,3
Error in line 43: S292 S292 84,7
Error in line 28: HGcrtZAVCo1 A196 49,9
Error in line 60: S292 S292 46,4
Error in line 71: 87BTt S292 12,22
Error in line 68: HGcrtZAVCo1 A196 79,8
Error in line 46: 87BTt S292 2,8
Error in line 86: WOo4TCXQB A323 3227,3
Error in line 84: 87BTt A196 90,3
Error in line 97: WOo4TCXQB S292 25,7
Error in line 104: qaod A323 68,3
Error in line 107: qaod A196 75,4
Error in line 113: WOo4TCXQB S645 27,9
Error in line 131: HGcrtZAVCo1 A323 12,6
Error in line 123: 87BTt S292 19,3
Error in line 139: 87BTt A323 33,3
Error in line 145: WOo4TCXQB A196 37,7
Error in line 158: WOo4TCXQB S645 350,82
Error in line 156: S292 S292 59,2
Error in line 157: WOo4TCXQB S645 92,4
Error in line 159: S292 A196 98,8
Error in line 154: HGcrtZAVCo1 S292 2529,1
Error in line 167: S292 A196 13,0
Error in line 128: aGKfQQL5 S292 99,1
Error in line 178: WOo4TCXQB S292 51,5
Error in line 184: aGKfQQL5 S645 64,6
Error in line 198: aGKfQQL5 S645 4,4
Error in line 205: WOo4TCXQB A323 43,6
Error in line 219: S292 S645 77,5
